--- a/src/app/auth/pages/login-page/login-page.component.html
+++ b/src/app/auth/pages/login-page/login-page.component.html
@@ -1,1 +1,54 @@
 <app-toolbar></app-toolbar>
+
+<div class="min-h-screen flex items-center justify-center bg-gray-300 p-4">
+    <div class="bg-white shadow-lg rounded-lg flex flex-col md:flex-row max-w-4xl w-full h-auto">
+  
+      <!-- Card 1: Mensaje de bienvenida -->
+      <div class="w-full md:w-1/2 bg-dark-purple text-black p-8 flex flex-col items-center justify-center rounded-t-lg md:rounded-l-lg md:rounded-t-none">
+        <img src="assets/images/logo-fenix.jpeg" alt="" srcset="">
+        <!-- <p class="text-base md:text-lg pt-4">Sistema para gestión de almacén.</p> -->
+      </div>
+      <!-- Card 2: Formulario de Login -->
+      <div class="w-full md:w-1/2 p-6 md:p-8 flex flex-col justify-center bg-gray-50">
+        <h1 class="text-2xl md:text-3xl font-extrabold mb-6 text-center">Iniciar Sesión</h1>
+        <form class="w-full" [formGroup]="loginForm">
+          <div class="mb-4">
+            <label for="username" class="block text-base md:text-lg font-medium text-gray-700">Nombre de Usuario</label>
+            <input type="text" formControlName="email"
+              class="mt-1 block w-full p-3 border border-gray-300 rounded-md shadow-sm focus:ring-green-500 focus:border-green-500 sm:text-base"
+              placeholder="Tu nombre de usuario">
+          </div>
+          <div class="mb-4 relative">
+            <label for="password" class="block text-base md:text-lg font-medium text-gray-700">Contraseña</label>
+            <div class="relative">
+              <input [type]="canShowPassword ? 'text' : 'password'" formControlName="password"
+                class="mt-1 block w-full p-3 pr-10 border border-gray-300 rounded-md shadow-sm focus:ring-green-500 focus:border-green-500 sm:text-base"
+                placeholder="Tu contraseña">
+              <button type="button" 
+                      class="absolute inset-y-0 right-0 pr-3 flex items-center text-sm leading-5"
+                      (click)="canShowPassword = !canShowPassword">
+                @if(canShowPassword){
+                  <svg class="w-[25px] h-[25px] text-gray-800" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3.933 13.909A4.357 4.357 0 0 1 3 12c0-1 4-6 9-6m7.6 3.8A5.068 5.068 0 0 1 21 12c0 1-3 6-9 6-.314 0-.62-.014-.918-.04M5 19 19 5m-4 7a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z"/>
+                  </svg>                
+                } @else {
+                  <svg class="w-[25px] h-[25px] text-gray-800" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+                    <path stroke="currentColor" stroke-width="2" d="M21 12c0 1.2-4.03 6-9 6s-9-4.8-9-6c0-1.2 4.03-6 9-6s9 4.8 9 6Z"/>
+                    <path stroke="currentColor" stroke-width="2" d="M15 12a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z"/>
+                  </svg> 
+                }                                   
+              </button>
+            </div>
+          </div>
+          <p class="mt-4 text-right text-sm text-gray-600"><a [routerLink]="['/auth/forgot-password']" class="text-dark-purple font-bold">Olvidé mi contraseña</a></p>
+          <div class="flex justify-center mb-4">
+            <button mat-flat-button color="primary" [disabled]="loginForm.invalid" (click)="login()">
+              Ingresar
+            </button>
+          </div>
+        </form>  
+      </div>
+    </div>
+  </div>
+  
+  
