--- a/src/app/auth/pages/register-page/register-page.component.html
+++ b/src/app/auth/pages/register-page/register-page.component.html
@@ -1,7 +1,8 @@
 <app-toolbar></app-toolbar>
-
-<div class="flex justify-center items-center h-full mt-40 pb-6">
-    <mat-card appearance="outlined" class="w-1/2 p-8">
+@if(!showVideos)
+{
+  <div class="flex justify-center items-center h-full mt-20 pb-6">
+    <mat-card appearance="outlined" class="w-3/5 p-8">
       <mat-card-header>
         <mat-card-title class="text-white text-center">
             Formulario de Registro
@@ -9,69 +10,107 @@
       </mat-card-header>
 
       <mat-card-content class="text-white mt-4">
-        <!-- Añade formGroup aquí para enlazar el formulario reactivo -->
-        <form [formGroup]="registerForm" class="flex flex-col" (ngSubmit)="onSubmit()">
+        <form [formGroup]="registerForm" class="flex flex-wrap -mx-2" (ngSubmit)="onSubmit()">
+          <div class="w-full md:w-2/2 px-2 mb-4">
             <mat-form-field class="w-full">
-                <mat-label>Nombre Completo</mat-label>
-                <!-- Enlaza el input con el control del formulario reactivo -->
-                <input matInput placeholder="Ingrese su nombre completo..." formControlName="fullName">
+              <mat-label>Nombre Completo</mat-label>
+              <input matInput placeholder="Ingrese su nombre completo..." formControlName="fullName">
             </mat-form-field>
+          </div>
+          <div class="w-full md:w-1/2 px-2 mb-4">
             <mat-form-field class="w-full">
-                <mat-label>Documento</mat-label>
-                <input matInput placeholder="Ingrese su número de documento..." formControlName="document">
+              <mat-label>Documento</mat-label>
+              <input matInput placeholder="Ingrese su número de documento..." formControlName="document">
             </mat-form-field>
+            <div
+              *ngIf="registerForm.get('document')?.hasError('emdocumentail')"
+              class="w-full px-2 mb-4 text-red-300 text-xs">
+              Documento inválido.
+            </div>
+          </div>
+          <div class="w-full md:w-1/2 px-2 mb-4">
             <mat-form-field class="w-full">
-                <mat-label>Correo</mat-label>
-                <input matInput placeholder="Correo" formControlName="email">
+              <mat-label>Correo</mat-label>
+              <input matInput placeholder="Correo" formControlName="email">
             </mat-form-field>
+            <div *ngIf="registerForm.get('email')?.hasError('email')" class="w-full px-2 mb-4 text-red-300 text-xs">
+              Formato de correo inválido.
+            </div>
+          </div>
+          <div class="w-full md:w-1/2 px-2 mb-4">
             <mat-form-field class="w-full">
-                <mat-label>Contraseña</mat-label>
-                <input type="password" matInput placeholder="Contraseña" formControlName="password">
-                <label class="text-green-500">Debe contener mayusculas, números y minímo 8 caracteres</label>
+              <mat-label>Contraseña</mat-label>
+              <input
+                type="password"
+                matInput
+                placeholder="Contraseña"
+                formControlName="password"
+                pattern="^(?=.*[A-Z])(?=.*\d)[A-Za-z\d]{8,}$"
+              >
+              <mat-error *ngIf="registerForm.get('password')?.hasError('pattern')">
+                La contraseña debe contener mayúsculas, números y un mínimo de 8 caracteres.
+              </mat-error>
             </mat-form-field>
+          </div>
+          <div class="w-full md:w-1/2 px-2 mb-4">
             <mat-form-field class="w-full">
-                <mat-label>Confirmar Contraseña</mat-label>
-                <input type="password" matInput placeholder="Confirmar Contraseña" formControlName="confirmPassword">
-            </mat-form-field>
+              <mat-label>Confirmar Contraseña</mat-label>
+              <input type="password" matInput placeholder="Confirmar Contraseña" formControlName="confirmPassword">
+              </mat-form-field>
+                <div *ngIf="!passwordsMatch()" class="w-full px-2 mb-4 text-red-300 text-xs">
+                  Las contraseñas no coinciden.
+                </div>
+            </div>
+          <div class="w-full md:w-1/2 px-2 mb-4">
             <mat-form-field class="w-full">
-                <mat-label>País</mat-label>
-                <mat-select placeholder="Seleccione su país..." formControlName="country">
-                    <mat-option value="Colombia">Colombia</mat-option>
-                    <!-- Agrega más opciones según sea necesario -->
-                </mat-select>
+              <mat-label>País</mat-label>
+              <mat-select placeholder="Seleccione su país..." formControlName="country">
+                <mat-option value="Colombia">Colombia</mat-option>
+              </mat-select>
             </mat-form-field>
-            
+          </div>
+          <div class="w-full md:w-1/2 px-2 mb-4">
             <mat-form-field class="w-full">
-                <mat-label>Teléfono Celular</mat-label>
-                <input matInput placeholder="Ingrese su teléfono celular..." formControlName="phoneNumber">
+              <mat-label>Teléfono Celular</mat-label>
+              <input matInput placeholder="Ingrese su teléfono celular..." formControlName="phoneNumber">
             </mat-form-field>
-            
+          </div>
+          <div class="w-full md:w-1/2 px-2 mb-4">
             <mat-form-field class="w-full">
-                <mat-label>Otro Tel. Celular</mat-label>
-                <input matInput placeholder="Ingrese otro teléfono celular..." formControlName="phoneNumber2">
+              <mat-label>Otro Tel. Celular</mat-label>
+              <input matInput placeholder="Ingrese otro teléfono celular..." formControlName="phoneNumber2">
             </mat-form-field>
-            
+          </div>
+          <div class="w-full md:w-1/2 px-2 mb-4">
             <mat-form-field class="w-full">
-                <mat-label>Esponsor</mat-label>
-                <input matInput placeholder="Nombre del esponsor..." formControlName="sponsor">
+              <mat-label>Esponsor</mat-label>
+              <input matInput placeholder="Nombre del esponsor..." formControlName="sponsor">
             </mat-form-field>
-            
+          </div>
+          <div class="w-full px-2 mb-4">
             <div class="flex items-center">
-                <!-- Enlaza el checkbox con el control del formulario reactivo -->
-                <mat-checkbox formControlName="termsAndConditions"></mat-checkbox>
-                <p class="ml-2 pt-3">Acepto los <a href="#" class="text-blue-500">Términos y Condiciones</a>.</p>
+              <mat-checkbox formControlName="termsAndConditions"></mat-checkbox>
+              <p class="ml-2 pt-3">Acepto los <a href="#" class="text-blue-500">Términos y Condiciones</a>.</p>
             </div>
-            
+          </div>
+          <div class="w-full px-2 mb-4">
             <div class="flex items-center mb-4">
-                <mat-checkbox formControlName="dataUsageConsent"></mat-checkbox>
-                <p class="ml-2 pt-3">Autorizo el <a href="#" class="text-blue-500">uso de mis datos personales</a>.</p>
+              <mat-checkbox formControlName="dataUsageConsent"></mat-checkbox>
+              <p class="ml-2 pt-3">Autorizo el <a href="#" class="text-blue-500">uso de mis datos personales</a>.</p>
             </div>
+          </div>
         </form>
       </mat-card-content>
 
       <mat-card-actions>
-        <!-- Añade un evento click para llamar a una función que maneje el envío del formulario -->
-        <button mat-flat-button (click)="onSubmit()">Registrarse</button>
+        <button mat-flat-button color="primary" (click)="onSubmit()">Registrarse</button>
       </mat-card-actions>
     </mat-card>
-</div>
+  </div>
+
+}
+@else
+{
+  <app-video-player></app-video-player>
+}
+
