--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -50,13 +50,13 @@
     </div>
 
     <mat-divider class="custom-divider w-full"></mat-divider>
-
+<!-- 
     <div class="flex items-center space-x-4 p-2 mb-5 mt-2">
         <img [ngClass]="!open ? 'h-7' : 'h-12'" class="rounded-full" src="http://www.gravatar.com/avatar/2acfb745ecf9d4dccb3364752d17f65f?s=260&d=mp" alt="James Bhatta">
         <div [ngClass]="!open ? 'hidden' : ''">
             <h4 class="pt-4 font-semibold text-lg text-white capitalize font-poppins tracking-wide">James Bhatta</h4>
         </div>
-    </div>
+    </div> -->
 
     <!-- Search Input -->
     <div [ngClass]="!open ? 'px-2.5' : 'px-4'"
