--- a/src/app/dashboard/pages/main-content-page/main-content-page.component.html
+++ b/src/app/dashboard/pages/main-content-page/main-content-page.component.html
@@ -1,1 +1,21 @@
-<p>main-content-page works!</p>
+<div class="h-screen">
+    <div class="flex justify-center items-center">
+        <!-- Tarjeta de Usuarios Registrados -->
+        <div class="bg-white shadow-lg rounded-lg p-6 m-4 flex flex-col items-center">
+            <svg class="w-[48px] h-[48px] text-gray-800" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+                <path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M4.5 17H4a1 1 0 0 1-1-1 3 3 0 0 1 3-3h1m0-3.05A2.5 2.5 0 1 1 9 5.5M19.5 17h.5a1 1 0 0 0 1-1 3 3 0 0 0-3-3h-1m0-3.05a2.5 2.5 0 1 0-2-4.45m.5 13.5h-7a1 1 0 0 1-1-1 3 3 0 0 1 3-3h3a3 3 0 0 1 3 3 1 1 0 0 1-1 1Zm-1-9.5a2.5 2.5 0 1 1-5 0 2.5 2.5 0 0 1 5 0Z"/>
+            </svg>                       
+            <div class="text-xl mt-2">Usuarios Registrados</div>
+            <div class="text-lg text-green-800 mt-1 font-bold">150</div> <!-- Contador de Usuarios Registrados -->
+        </div>
+      
+        <!-- Tarjeta de Usuarios Patrocinados -->
+        <div class="bg-white shadow-lg rounded-lg p-6 m-4 flex flex-col items-center">
+            <svg class="w-[48px] h-[48px] text-gray-800" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+                <path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M16 19h4a1 1 0 0 0 1-1v-1a3 3 0 0 0-3-3h-2m-2.236-4a3 3 0 1 0 0-4M3 18v-1a3 3 0 0 1 3-3h4a3 3 0 0 1 3 3v1a1 1 0 0 1-1 1H4a1 1 0 0 1-1-1Zm8-10a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z"/>
+            </svg>                          
+            <div class="text-xl mt-2">Usuarios Patrocinados</div>
+            <div class="text-lg text-green-700 mt-1 font-bold">75</div> <!-- Contador de Usuarios Patrocinados -->
+        </div>
+    </div>
+</div>
