--- a/src/app/shared/layouts/admin-layout/admin-layout.component.html
+++ b/src/app/shared/layouts/admin-layout/admin-layout.component.html
@@ -6,7 +6,7 @@
 
     <app-header></app-header>
 
-    <div class="p-1 w-full bg-gray-100"> 
+    <div class="p-1 w-full h-full bg-black"> 
       <router-outlet></router-outlet>
     </div>
   </div>
