componente para visualizar un video y obtner su final mediante js.

--- a/src/app/index/pages/home-page/home-page.component.html
+++ b/src/app/index/pages/home-page/home-page.component.html
@@ -36,5 +36,7 @@
   </div>
 </div>
 <!-- Videos -->
-<app-video-player></app-video-player>
+<app-videos-player></app-videos-player>
+<app-video-player [videoId]="'62uDM9w6ajU'"></app-video-player>
+
 
