--- a/src/app/shared/components/video-player/video-player.component.scss
+++ b/src/app/shared/components/video-player/video-player.component.scss
@@ -1,19 +1,36 @@
-.video-links {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-  margin-top: 1rem;
-}
 .video-container {
-  margin-top: 1rem;
-}
-.video-container iframe {
-  width: 560px;
-  height: 315px;
+  position: relative;
+  display: inline-block; /* Asegura que el contenedor del video ajuste su tamaño al del video */
 }
 
+.absolute {
+  position: absolute;
+}
 
-.x-cerrar{
-  margin-left: 50% !important;
-  font-size: 2rem;
+.top-2 {
+  top: 0.5rem;
+}
+
+.right-2 {
+  right: 0.5rem;
+}
+
+.text-white {
+  color: #ffffff;
+}
+
+.p-2 {
+  padding: 0.5rem;
+}
+
+.rounded-full {
+  border-radius: 9999px;
+}
+
+.text-xl {
+  font-size: 2.25rem;
+}
+
+.close-button {
+  background-color: rgba(0, 0, 0, 0.5); /* Fondo semi-transparente para mejor visibilidad */
 }
