ajuste para ver video antes de completar registro usuario

--- a/src/app/auth/pages/register-page/register-page.component.html
+++ b/src/app/auth/pages/register-page/register-page.component.html
@@ -109,8 +109,8 @@
   </div>
 
 }
-@else
+<!-- @else
 {
-  <app-video-player></app-video-player>
-}
+  <app-video-player [videoId]="'0Bmhjf0rKe8'"></app-video-player>
+} -->
 
