--- a/src/app/index/pages/home-page/home-page.component.html
+++ b/src/app/index/pages/home-page/home-page.component.html
@@ -3,33 +3,23 @@
 <div class="fondo">
   <div class="clock">
     <div class="flex flex-col items-center p-4 bg-white rounded-lg shadow-xs dark:bg-gray-800">
-      <div class="p-3 mb-2 text-orange-500 bg-yellow-100 rounded-full dark:text-orange-100 dark:bg-yellow-500">
-        <svg class="w-6 h-6 text-gray-800 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
-          <path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M4.5 17H4a1 1 0 0 1-1-1 3 3 0 0 1 3-3h1m0-3.05A2.5 2.5 0 1 1 9 5.5M19.5 17h.5a1 1 0 0 0 1-1 3 3 0 0 0-3-3h-1m0-3.05a2.5 2.5 0 1 0-2-4.45m.5 13.5h-7a1 1 0 0 1-1-1 3 3 0 0 1 3-3h3a3 3 0 0 1 3 3 1 1 0 0 1-1 1Zm-1-9.5a2.5 2.5 0 1 1-5 0 2.5 2.5 0 0 1 5 0Z"/>
-        </svg>
-      </div>
       <div>
-        <p class="mb-2 text-sm font-medium text-gray-600 dark:text-gray-400">
+        <p class="mb-2 text-2xl text-gray-600 dark:text-gray-400">
           Registrados
         </p>
-        <p class="text-lg font-semibold text-gray-700 dark:text-gray-200 text-center">
-          10
+        <p class="text-3xl font-semibold text-gray-700 dark:text-gray-200 text-center">
+          {{ totalRegisters }}
         </p>
       </div>
     </div>
 
     <div class="flex flex-col items-center p-4 bg-white rounded-lg shadow-xs dark:bg-gray-800">
-      <div class="p-3 mb-2 text-orange-500 bg-yellow-100 rounded-full dark:text-orange-100 dark:bg-yellow-500">
-        <svg class="w-6 h-6 text-gray-800 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
-          <path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M16 19h4a1 1 0 0 0 1-1v-1a3 3 0 0 0-3-3h-2m-2.236-4a3 3 0 1 0 0-4M3 18v-1a3 3 0 0 1 3-3h4a3 3 0 0 1 3 3v1a1 1 0 0 1-1 1H4a1 1 0 0 1-1-1Zm8-10a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z"/>
-        </svg>
-      </div>
       <div>
-        <p class="mb-2 text-sm font-medium text-gray-600 dark:text-gray-400">
+        <p class="mb-2 text-2xl text-gray-600 dark:text-gray-400">
             Patrocinados
         </p>
-        <p class="text-lg font-semibold text-gray-700 dark:text-gray-200 text-center">
-         5
+        <p class="text-3xl font-semibold text-gray-700 dark:text-gray-200 text-center">
+          {{ totalPatrociners }}
         </p>
       </div>
     </div>
