Change state users

--- a/src/app/shared/components/reusable-table/reusable-table.component.html
+++ b/src/app/shared/components/reusable-table/reusable-table.component.html
@@ -57,7 +57,7 @@
         <button mat-icon-button matTooltip="Basic" 
                 *ngIf="isActionAllowed(TABLE_ACTION.EDIT)" 
                 (click)="onEdit(row) ">
-          <mat-icon>favorite</mat-icon>
+          <mat-icon>edit</mat-icon>
         </button>
         <button mat-icon-button matTooltip="Basic"
                 *ngIf="isActionAllowed(TABLE_ACTION.DELETE)"
