--- a/src/app/dashboard/users/pages/list-all-users-page/list-all-users-page.component.html
+++ b/src/app/dashboard/users/pages/list-all-users-page/list-all-users-page.component.html
@@ -1,6 +1,7 @@
 <div class="bg-black">
     <app-reusable-table [data]="usersList" 
                         [columns]="tableColumns"
-                        [config]="tableConfig">
+                        [config]="tableConfig"
+                        (action)="onTableAction($event)">
     </app-reusable-table>
 </div>
