--- a/src/app/auth/pages/register-page/register-page.component.html
+++ b/src/app/auth/pages/register-page/register-page.component.html
@@ -84,7 +84,7 @@
           <div class="w-full md:w-1/2 px-2 mb-4">
             <mat-form-field class="w-full">
               <mat-label>Esponsor</mat-label>
-              <input matInput placeholder="Nombre del esponsor..." formControlName="sponsor">
+              <input matInput placeholder="Ingrese documento del sponsor..." formControlName="sponsor">
             </mat-form-field>
           </div>
           <div class="w-full px-2 mb-4">
