--- a/src/app/index/pages/home-page/home-page.component.html
+++ b/src/app/index/pages/home-page/home-page.component.html
@@ -1,30 +1,28 @@
 <app-toolbar></app-toolbar>
 
-<div class="fondo">
-  <div class="clock">
-    <div class="flex flex-col items-center p-4 bg-white rounded-lg shadow-xs dark:bg-gray-800">
-      <div>
-        <p class="mb-2 text-2xl text-gray-600 dark:text-gray-400">
+<div class="fondo flex justify-center items-center h-screen bg-gray-100">
+  <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
+    <div class="flex flex-col items-center p-6 bg-white rounded-lg shadow-lg dark:bg-gray-800 transition-transform transform hover:scale-105">
+      <div class="flex items-center mb-4">
+        <p class="text-2xl font-bold text-gray-700 dark:text-gray-400">
+          <mat-icon class="text-gray-700 dark:text-gray-300 mr-2">group</mat-icon>
+          Patrocinados
+        </p>
+      </div>
+      <p class="digital-clock text-4xl font-bold text-center bg-black text-yellow-500 p-2 rounded" [appCompleteZeros]="totalPatrociners"></p>
+    </div>
+    <div class="flex flex-col items-center p-6 bg-white rounded-lg shadow-lg dark:bg-gray-800 transition-transform transform hover:scale-105">
+      <div class="flex items-center mb-4">
+        <p class="text-2xl font-bold text-gray-700 dark:text-gray-400">
+          <mat-icon class="text-gray-700 dark:text-gray-300 mr-2">group</mat-icon>
           Registrados
         </p>
-        <p class="text-3xl font-semibold text-gray-700 dark:text-gray-200 text-center">
-          {{ totalRegisters }}
-        </p>
       </div>
-    </div>
-
-    <div class="flex flex-col items-center p-4 bg-white rounded-lg shadow-xs dark:bg-gray-800">
-      <div>
-        <p class="mb-2 text-2xl text-gray-600 dark:text-gray-400">
-            Patrocinados
-        </p>
-        <p class="text-3xl font-semibold text-gray-700 dark:text-gray-200 text-center">
-          {{ totalPatrociners }}
-        </p>
-      </div>
+      <p class="digital-clock text-4xl font-bold text-center bg-black text-yellow-500 p-2 rounded" [appCompleteZeros]="totalRegisters"></p>
     </div>
   </div>
 </div>
+
 <!-- Videos -->
  <app-galery-videos></app-galery-videos>
 
