--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,3 +4,7 @@
 @import 'tailwindcss/utilities';
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+@font-face {
+  font-family: 'Digital-7';
+  src: url('/assets/fonts/digital-7.ttf') format('truetype');
+}
