--- a/src/app/index/pages/home-page/home-page.component.scss
+++ b/src/app/index/pages/home-page/home-page.component.scss
@@ -1,12 +1,12 @@
 .fondo {
   background: url('/assets/images/logo-fenix.jpeg') no-repeat center center;
   background-size: contain;
-  height: 80vh;
+  // height: 80vh;
   margin: 0;
   display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  // flex-direction: column;
+  // justify-content: space-between;
+  // align-items: ;
 }
 .clock {
   display: flex;
